fix bug where the toolbar overlaps the footer

--- a/public/styles/keystone/item.less
+++ b/public/styles/keystone/item.less
@@ -171,6 +171,9 @@
 // ------------------------------
 
 .item-details {
+	// stop the sticky toolbar from covering the footer's box-shadow
+	padding-bottom: 1px;
+}
 
 	// Exclusive styles for FormField components inside the item details form
 	.form-field {
